--- a/index.html
+++ b/index.html
@@ -3,148 +3,212 @@
     <head>
         <meta charset="UTF-8">
         <title>Furniture</title>
-        <link rel="Stylesheet" href="#">
+        <link rel="Stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-wicth, initial-scale=1.0">
+        <link rel="shortcut icon" href="logo/favicon.png">
     </head>
     <body>
         <header>
-            <img src="#" alt="SineMkt. - logo empresarial">
-            <ul>
-                <li>Home</li>
-                <li>New Arrival</li>
-                <li>Features</li>
-                <li>Blog</li>
-                <li>Contact</li>
-            </ul>
-            <ul>
-                <li>
-                    <img src="#" alt="lupa de busqueda">
-                </li>
-                <li>
-                    <img src="#" alt="Rueda de configuracion">
-                </li>
-                <li>
-                    <img src="#" alt="Carrito de compra">
-                </li>
-            </ul>
+            <div class="Contenedor_Header">
+                <h1 id="Logo"><a href="#">sinemkt</a></h1>
+                <nav>
+                    <ul>
+                        <li><a href="#" id="Actual">Home</a></li>
+                        <li><a href="#">New Arrival</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <ul class="Busqueda_Header">
+                    <li>
+                        <img src="Icons/Lupa.svg" alt="lupa de busqueda" class="Icon_Header">
+                    </li>
+                    <li>
+                        <img src="Icons/Configuracion.svg" alt="Rueda de configuracion" class="Icon_Header">
+                    </li>
+                    <li>
+                        <img src="Icons/CarroDeCompra.svg" alt="Carrito de compra" class="Icon_Header">
+                    </li>
+                </ul>
+            </div>
         </header>
         <main>
-            <section>
-                <article>
+            <article class="Slider">
+                <section>
                     <h4>Great Design Collection</h4>
                     <h3>Mapple Wood Accent Chair</h3>
                     <p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiuiana Smod Tempor Ut Labore Et Dolore Magna Aliqua. Ut Enim Ad Minim Veniam, Quis Nostrud Exercitation Ullamco Laboris Nisi Ut Aliquip</p>
-                    <hr>
                     <p>$precio</p><p><del>$precio</del></p>
-                </article>
+                    <img src="images/slider/slider1.png" alt="mueble slider">
+                </section>
+                <section>
                     <h4>Great Design Collection</h4>
                     <h3>Cloth Covered Accent Chair</h3>
                     <p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiuiana Smod Tempor Ut Labore Et Dolore Magna Aliqua. Ut Enim Ad Minim Veniam, Quis Nostrud Exercitation Ullamco Laboris Nisi Ut Aliquip</p>
-                    <hr>
                     <p>$precio</p><p><del>$precio</del></p>
-                </article>
+                    <img src="images/slider/slider2.png" alt="mueble slider">
+                </section>
+                <section>
                     <h4>Great Design Collection</h4>
                     <h3>Valvet Accent Arm Chair</h3>
                     <p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiuiana Smod Tempor Ut Labore Et Dolore Magna Aliqua. Ut Enim Ad Minim Veniam, Quis Nostrud Exercitation Ullamco Laboris Nisi Ut Aliquip</p>
-                    <hr>
                     <p>$precio</p><p><del>$precio</del></p>
-                </article>
-            </section>
-            <section>
-                <article>
-                    <img src="#" alt="Mueble packages-price">
+                    <img src="images/slider/slider3.png" alt="mueble slider">
+                </section>
+            </article>
+            <article>
+                <section>
+                    <img src="images/populer-products/p1.png" alt="Mueble packages-price">
                     <h3>Arm Chair</h3>
                     <p>Nemo enim ipsam voluptatem quia volu ptas sit asperna aut odit aut</p>
-                </article>
-                <article>
-                    <img src="#" alt="Silla bomnita">
+                </section>
+                <section>
+                    <img src="images/populer-products/p2.png" alt="Silla bomnita">
                     <h3>Arm Chair</h3>
                     <p>Edit Ut Perspiciatis Unde Omnis Iste Natusina Error Sit Voluptatem Accusantiun Doloret Mque Laudantium, Totam Rem aperiam</p>
                     <p>Sales Start From <bold>$99.00</bold></p>
                     <button>Discover More</button>
-                </article>
-                <article>
-                    <img src="#" alt="hanging lamp">
+                </section>
+                <section>
+                    <img src="images/populer-products/p3.png" alt="hanging lamp">
                     <h3>Hanging Lamp</h3>
                     <p>Nemo enim ipsam voluptem quia volu ptas sit asperna aut odit aut fugit</p>
-                </article>
-            </section>
-            <section>
+                </section>
+            </article>
+            <article>
                 <h2>New Arrivals</h2>
-                <article>
-                    <img src="#" alt="wooden Chair">
+                <section>
+                    <img src="images/collection/arrivals1.png" alt="wooden Chair">
                     <h3><a href="#">Wooden Chair</a></h3>
                     <p>$65.00</p>
-                </article>
-                <article>
-                    <img src="#" alt="single armchair">
+                </section>
+                <section>
+                    <img src="images/collection/arrivals2.png" alt="single armchair">
                     <h3><a href="#">Single Armchair</a></h3>
                     <p>$80.00</p>
-                </article>
-                <article>
-                    <img src="#" alt="wooden armchair">
+                </section>
+                <section>
+                    <img src="images/collection/arrivals3.png" alt="wooden armchair">
                     <h3><a href="#">Wooden Armchair</a></h3>
                     <p>$40.00</p>
-                </article>
-                <article>
-                    <img src="#" alt="Stylish Chair">
+                </section>
+                <section>
+                    <img src="images/collection/arrivals4.png" alt="Stylish Chair">
                     <h3><a href="#">Stylish Chair</a></h3>
                     <p>$100.00</p>
-                </article>
-                <article>
-                    <img src="#" alt="Modern Chair">
+                </section>
+                <section>
+                    <img src="images/collection/arrivals5.png" alt="Modern Chair">
                     <h3><a href="#">Modern Chair</a></h3>
                     <p>$120.00</p>
-                </article>
-                <article>
-                    <img src="#" alt="mapple wood dining table">
+                </section>
+                <section>
+                    <img src="images/collection/arrivals6.png" alt="mapple wood dining table">
                     <h3><a href="#">Mapple Wood Dining Table</a></h3>
                     <p>$140.00</p>
-                </article>
-                <article>
-                    <img src="#" alt="arm chair">
+                </section>
+                <section>
+                    <img src="images/collection/arrivals7.png" alt="arm chair">
                     <h3><a href="#">Arm Chair</a></h3>
                     <p>$90.00</p>
-                </article>
-                <article>
-                    <img src="#" alt="wooden bed">
+                </section>
+                <section>
+                    <img src="images/collection/arrivals8.png" alt="wooden bed">
                     <h3><a href="#">wooden bed</a></h3>
                     <p>$140.00</p>
-                </article>
-            </section>
-            <section>
-                <img src="#" alt="Fondo decorativo con muebles">
+                </section>
+            </article>
+            <article>
+                <img src="images/collection/sofa-collection-banner.jpg" alt="Fondo decorativo con muebles">
                 <h4>Unlimited Daining Table Collection</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut corporis, deserunt magni iste ipsam consequatur harum voluptas doloribus porro quasi distinctio voluptates aperiam iure consectetur nostrum hic expedita. Velit!</p>
                 <p>String From <b>$ 299</b></p>
                 <button>View More</button>
-            </section>
-            <section>
+            </article>
+            <article>
                 <h2>Featured Products</h2>
-                <article>
-
-                </article>
-                <article>
-
-                </article>
-                <article>
-
-                </article>
-                <article>
-                    
-                </article>
-            </section>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
-            <section>
-
-            </section>
+                <section>
+                    <img src="images/features/f1.jpg">
+                    <h3>Designed Sofa</h3>
+                    <p>$precio</p>
+                </section>
+                <section>
+                    <img src="images/features/f2.jpg">
+                    <h3>Designed Sofa</h3>
+                    <p>$precio</p>
+                </section>
+                <section>
+                    <img src="images/features/f3.jpg">
+                    <h3>Designed Sofa</h3>
+                    <p>$precio</p>
+                </section>
+                <section>
+                    <img src="images/features/f4.jpg">
+                    <h3>Designed Sofa</h3>
+                    <p>$precio</p>
+                </section>
+            </article>
+            <article>
+                <h2>Latest Blog</h2>
+                <section>
+                    <img src="images/blog/b1.jpg">
+                    <h3>Why Brands are Looking at local language</h3>
+                    <p>By Robert Norby / 18th March 2018</p>
+                    <p>Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
+                </section>
+                <section>
+                    <img src="images/blog/b2.jpg">
+                    <h3>Why Brands are Looking at local language</h3>
+                    <p>By Robert Norby / 18th March 2018</p>
+                    <p>Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
+                </section>
+                <section>
+                    <img src="images/blog/b3.jpg">
+                    <h3>Why Brands are Looking at local language</h3>
+                    <p>By Robert Norby / 18th March 2018</p>
+                    <p>Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
+                </section>
+            </article>
+            <article>
+                <ul>
+                    <li><a href="#"><img src="images/clients/c1.png"></a></li>
+                    <li><a href="#"><img src="images/clients/c2.png"></a></li>
+                    <li><a href="#"><img src="images/clients/c3.png"></a></li>
+                    <li><a href="#"><img src="images/clients/c4.png"></a></li>
+                    <li><a href="#"><img src="images/clients/c5.png"></a></li>
+                </ul>
+            </article>
             <footer>
+                <ul>
+                    <li>Information</li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Store</a></li>
+                </ul>
+                <ul>
+                    <li>Collections</li>
+                    <li><a href="#">Wooden Chair</a></li>
+                    <li><a href="#">Royal Cloth Sofa</a></li>
+                    <li><a href="#">Accent Chair</a></li>
+                    <li><a href="#">Bed</a></li>
+                    <li><a href="#">Hanging Lamp</a></li>                    
+                </ul>
+                <ul>
+                    <li>My Accounts</li>
+                    <li><a href="#">Wishlist</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Order History</a></li>
+                    <li><a href="#">My Cart</a></li>
+                </ul>
 
+                <div>
+                    <h5>NewsLettrer</h5>
+                    <p>Suscribe to get latest news, update and information</p>
+                    <input type="text">
+                </div>
             </footer>
         </main>
     </body>
