Setting up the base

--- a/index.html
+++ b/index.html
@@ -126,140 +126,139 @@
                     <p>Nemo enim ipsam voluptem quia volu ptas sit asperna aut odit aut fugit</p>
                 </section>
             </article>
-            <article>
+            <article class="New-Arrivals">
                 <h2>New Arrivals</h2>
-                <section>
-                    <img src="images/collection/arrivals1.png" alt="wooden Chair">
-                    <h3><a href="#">Wooden Chair</a></h3>
-                    <p>$65.00</p>
-                </section>
-                <section>
-                    <img src="images/collection/arrivals2.png" alt="single armchair">
-                    <h3><a href="#">Single Armchair</a></h3>
-                    <p>$80.00</p>
-                </section>
-                <section>
-                    <img src="images/collection/arrivals3.png" alt="wooden armchair">
-                    <h3><a href="#">Wooden Armchair</a></h3>
-                    <p>$40.00</p>
-                </section>
-                <section>
-                    <img src="images/collection/arrivals4.png" alt="Stylish Chair">
-                    <h3><a href="#">Stylish Chair</a></h3>
-                    <p>$100.00</p>
-                </section>
-                <section>
-                    <img src="images/collection/arrivals5.png" alt="Modern Chair">
-                    <h3><a href="#">Modern Chair</a></h3>
-                    <p>$120.00</p>
-                </section>
-                <section>
-                    <img src="images/collection/arrivals6.png" alt="mapple wood dining table">
-                    <h3><a href="#">Mapple Wood Dining Table</a></h3>
-                    <p>$140.00</p>
-                </section>
-                <section>
-                    <img src="images/collection/arrivals7.png" alt="arm chair">
-                    <h3><a href="#">Arm Chair</a></h3>
-                    <p>$90.00</p>
-                </section>
-                <section>
-                    <img src="images/collection/arrivals8.png" alt="wooden bed">
-                    <h3><a href="#">wooden bed</a></h3>
-                    <p>$140.00</p>
-                </section>
+                <div class="New-Arrivals__grid-wapper">
+                    <section>
+                        <img src="images/collection/arrivals1.png" alt="wooden Chair">
+                        <div class="New-Arrivals__grid-wapper-text">
+                            <h3><a href="#">Wooden Chair</a></h3>
+                            <p>$65.00</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="images/collection/arrivals2.png" alt="single armchair">
+                        <div class="New-Arrivals__grid-wapper-text">
+                            <h3><a href="#">Single Armchair</a></h3>
+                            <p>$80.00</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="images/collection/arrivals3.png" alt="wooden armchair">
+                        <div class="New-Arrivals__grid-wapper-text">
+                            <h3><a href="#">Wooden Armchair</a></h3>
+                            <p>$40.00</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="images/collection/arrivals4.png" alt="Stylish Chair">
+                        <div class="New-Arrivals__grid-wapper-text">
+                            <h3><a href="#">Stylish Chair</a></h3>
+                            <p>$100.00</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="images/collection/arrivals5.png" alt="Modern Chair">
+                        <div class="New-Arrivals__grid-wapper-text">
+                            <h3><a href="#">Modern Chair</a></h3>
+                            <p>$120.00</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="images/collection/arrivals6.png" alt="mapple wood dining table">
+                        <div class="New-Arrivals__grid-wapper-text">
+                            <h3><a href="#">Mapple Wood Dining Table</a></h3>
+                            <p>$140.00</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="images/collection/arrivals7.png" alt="arm chair">
+                        <div class="New-Arrivals__grid-wapper-text">
+                            <h3><a href="#">Arm Chair</a></h3>
+                            <p>$90.00</p>
+                        </div>
+                    </section>
+                    <section>
+                        <img src="images/collection/arrivals8.png" alt="wooden bed">
+                        <div class="New-Arrivals__grid-wapper-text">
+                            <h3><a href="#">wooden bed</a></h3>
+                            <p>$140.00</p>
+                        </div>
+                    </section>
+                </div>
             </article>
-            <article>
-                <img src="images/collection/sofa-collection-banner.jpg" alt="Fondo decorativo con muebles">
-                <h4>Unlimited Daining Table Collection</h4>
-                <p class="Slider__section-div-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut corporis, deserunt magni iste ipsam consequatur harum voluptas doloribus porro quasi distinctio voluptates aperiam iure consectetur nostrum hic expedita. Velit!</p>
-                <p>String From <b>$ 299</b></p>
-                <button>View More</button>
+            <article class="Sofa-Collection">                   
+                <div class="Sofa-Collection__Fondo"></div>
+                <div class="Sofa-Collection__Content">                        
+                    <h4>Unlimited Daining Table Collection</h4>
+                    <p class="Slider__section-div-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ut corporis, deserunt magni iste ipsam consequatur harum voluptas doloribus porro quasi distinctio voluptates aperiam iure consectetur nostrum hic expedita. Velit!</p>
+                    <p>String From <b>$ 299</b></p>
+                    <button>View More</button>
+                </div>
             </article>
-            <article>
-                <h2>Featured Products</h2>
-                <section>
-                    <img src="images/features/f1.jpg">
-                    <h3>Designed Sofa</h3>
-                    <p class="Precio Slider__section-div-p">$precio</p>
-  class="Slider__section-div-p"               </section>
-                <section>
-                    <img src="images/features/f2.jpg">
-                    <h3>Designed Sofa</h3>
-                    <p class="Precio Slider__section-div-p">$precio</p>
-  class="Slider__section-div-p"               </section>
-                <section>
-                    <img src="images/features/f3.jpg">
-                    <h3>Designed Sofa</h3>
-                    <p class="Precio Slider__section-div-p">$precio</p>
-  class="Slider__section-div-p"               </section>
-                <section>
-                    <img src="images/features/f4.jpg">
-                    <h3>Designed Sofa</h3>
-                    <p class="Precio Slider__section-div-p">$precio</p>
-  class="Slider__section-div-p"               </section>
-            </article>
-            <article>
+            <article class="Latest-Blog">
                 <h2>Latest Blog</h2>
-                <section>
-                    <img src="images/blog/b1.jpg">
-                    <h3>Why Brands are Looking at local language</h3>
-                    <p>By Robert Norby / 18th March 2018</p>
-                    <p>Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
-                </section>
-                <section>
-                    <img src="images/blog/b2.jpg">
-                    <h3>Why Brands are Looking at local language</h3>
-                    <p>By Robert Norby / 18th March 2018</p>
-                    <p>Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
-                </section>
-                <section>
-                    <img src="images/blog/b3.jpg">
-                    <h3>Why Brands are Looking at local language</h3>
-                    <p>By Robert Norby / 18th March 2018</p>
-                    <p>Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
-                </section>
+                <div class="Latest-Blog__div">
+                    <section>
+                        <img src="images/blog/b1.jpg">
+                        <h3>Why Brands are Looking at local language</h3>
+                        <p class="Date">By Robert Norby / 18th March 2018</p>
+                        <p class="text">Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
+                    </section>
+                    <section>
+                        <img src="images/blog/b2.jpg">
+                        <h3>Why Brands are Looking at local language</h3>
+                        <p class="Date">By Robert Norby / 18th March 2018</p>
+                        <p class="text">Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
+                    </section>
+                    <section>
+                        <img src="images/blog/b3.jpg">
+                        <h3>Why Brands are Looking at local language</h3>
+                        <p class="Date">By Robert Norby / 18th March 2018</p>
+                        <p class="text">Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut Fugit, Sed Quia Consequuntur Magni Dolores Eos Qui Ratione Voluptatem Sequi Nesciunt...</p>
+                    </section>
+                </div>
             </article>
-            <article>
-                <ul>
+            <article class="Marcas">
+                <ul class="Marcas__ul">
                     <li><a href="#"><img src="images/clients/c1.png"></a></li>
                     <li><a href="#"><img src="images/clients/c2.png"></a></li>
                     <li><a href="#"><img src="images/clients/c3.png"></a></li>
                     <li><a href="#"><img src="images/clients/c4.png"></a></li>
                     <li><a href="#"><img src="images/clients/c5.png"></a></li>
                 </ul>
-            </article>
-            <footer>
-                <ul>
-                    <li>Information</li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Store</a></li>
-                </ul>
-                <ul>
-                    <li>Collections</li>
-                    <li><a href="#">Wooden Chair</a></li>
-                    <li><a href="#">Royal Cloth Sofa</a></li>
-                    <li><a href="#">Accent Chair</a></li>
-                    <li><a href="#">Bed</a></li>
-                    <li><a href="#">Hanging Lamp</a></li>                    
-                </ul>
-                <ul>
-                    <li>My Accounts</li>
-                    <li><a href="#">Wishlist</a></li>
-                    <li><a href="#">Community</a></li>
-                    <li><a href="#">Community</a></li>
-                    <li><a href="#">Order History</a></li>
-                    <li><a href="#">My Cart</a></li>
-                </ul>
-
-                <div>
-                    <h5>NewsLettrer</h5>
-                    <p>Suscribe to get latest news, update and information</p>
-                    <input type="text">
-                </div>
-            </footer>
+            </article>            
         </main>
+        <footer>
+            <ul>
+                <li><h5>Information</h5></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Store</a></li>
+            </ul>
+            <ul>
+                <li><h5>Collections</h5></li>
+                <li><a href="#">Wooden Chair</a></li>
+                <li><a href="#">Royal Cloth Sofa</a></li>
+                <li><a href="#">Accent Chair</a></li>
+                <li><a href="#">Bed</a></li>
+                <li><a href="#">Hanging Lamp</a></li>                    
+            </ul>
+            <ul>
+                <li><h5>My Accounts</h5></li>
+                <li><a href="#">Wishlist</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Order History</a></li>
+                <li><a href="#">My Cart</a></li>
+            </ul>
+
+            <div>
+                <h5>NewsLettrer</h5>
+                <p>Suscribe to get latest news, update and information</p>
+                <input type="text">
+            </div>
+        </footer>
     </body>
 </html>
